colors more aligned with palette

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -7,9 +7,9 @@
 @color-walls: #B7DBD7;
 
 //  Page  colors
-@page__background-color: @color-ceiling;
-@sidebar__background-color: @color-walls;
-@primary__color: @color-red;
+@page__background-color: @color-walls;
+@sidebar__background-color: @color-ceiling;
+@primary__color: @color-floor;
 @border-color__base: @color-pu2;
 
 @link__color: @primary__color;
@@ -21,18 +21,18 @@
 @button__border: 1px solid @border-color__base;
 
 //  Primary button
-@button-primary__background: @color-orange-red1;
-@button-primary__border: 1px solid @color-orange-red2;
+@button-primary__background: @color-red;
+@button-primary__border: 1px solid @color-pu2;
 @button-primary__color: @color-white;
-@button-primary__hover__background: darken(@color-orange-red1, 5%);
-@button-primary__hover__border: 1px solid @color-orange-red2;
+@button-primary__hover__background: darken(@color-red, 5%);
+@button-primary__hover__border: 1px solid @color-pu2;
 @button-primary__hover__color: @color-white;
 
 //  Navigation
 @navigation-level0-item__color: @color-gray80;
 @submenu-item__color: @color-gray80;
 
-@navigation__background: @color-gray40;
+@navigation__background: @color-red;
 @navigation-desktop-level0-item__color: @color-gray80;
 @navigation-desktop-level0-item__hover__color: @color-gray34;
 @navigation-desktop-level0-item__active__color: @navigation-desktop-level0-item__color;
@@ -45,5 +45,5 @@
 @form-element-input-placeholder__color: @color-gray60;
 
 //  Header icons
-@header-icons-color: @color-gray89;
-@header-icons-color-hover: @color-gray60;
+@header-icons-color: @color-gray60;
+@header-icons-color-hover: @color-pu2;
