--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -43,11 +43,11 @@
 
 //  Navigation
 @navigation__background: @color-white;
-@navigation-level0-item__color: @color-pu2;
+@navigation-level0-item__color: @color-ceiling;
 @navigation-level0-item__active__border-color: @color-walls;
 
 @navigation-desktop__background: @color-floor;
-@navigation-desktop-level0-item__color: @color-pu2;
+@navigation-desktop-level0-item__color: @color-ceiling;
 @navigation-desktop-level0-item__hover__color: @color-walls;
 @navigation-desktop-level0-item__active__color: @color-walls;
 @navigation-desktop-level0-item__active__border-color: @color-walls;
@@ -70,8 +70,17 @@
 //  Header
 @header-panel__background-color: @color-pu2;
 @header__background-color: @color-white;
-@header-icons-color: @color-pu2;
-@header-icons-color-hover: darken(@color-pu2, 5%);
+@minicart-icons-color: @color-white;
+@minicart-icons-hover-color: darken(@color-white, 5%);
+@icon-search-color: @color-pu2;
+.block-search { margin-top: 10px; }
+div.minicart-wrapper { margin-top: -5px; }
+.nav-promo {
+    display: inline-block;;
+    border: 1px solid white;
+    margin-right: 10px;
+    padding: 10px;
+}
 
 // Footer
 @footer__background-color: @color-floor;
