--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -1,10 +1,17 @@
 //  Main palette colors
 //  http://www.colourlovers.com/palette/127033/1940s_subway_car
-@color-red: #9B0505;
-@color-floor: #363F3E;
-@color-pu2: #637573;
-@color-ceiling: #8BA7A3;
-@color-walls: #B7DBD7;
+//@color-red: #9B0505;
+//@color-floor: #363F3E;
+//@color-pu2: #637573;
+//@color-ceiling: #8BA7A3;
+//@color-walls: #B7DBD7;
+
+// Bob edits
+@color-red: #db011c;
+@color-floor: #3c3c3c;
+@color-pu2: #747474;
+@color-ceiling: #a8a8a8;
+@color-walls: #dadada;
 
 // Fonts
 @heading-font: 'Raleway', sans-serif;
@@ -24,10 +31,14 @@
 @link__hover__color: @color-pu2;
 @rating-icon__active__color: @color-red;
 
+// PLP
+.page-products .product-item-actions { float: right; }
+
 // PDP
 @gallery-thumb-border-color-active: @color-red; //not working?
 @gallery-dot-color-active: @color-red; //not working?
-
+.product.data.items > .item.content, .product.data.items > .item.title.active > .switch, .product.data.items > .item.title { background-color: @color-white; }
+.product.data.items > .item.title > .switch { background-color: @color-walls}
 //  Buttons
 @button__color: @color-gray20;
 @button__background: @color-gray80;
@@ -83,28 +94,174 @@
 @icon-search-color: @color-pu2;
 .block-search {
     margin: 10px 10px 0 0;
-    width:30%;
+    width:40%;
     float: right;
   }
 div.minicart-wrapper { margin-top: -5px; }
 .nav-promo {
     display: inline-block;;
-    border: 1px solid white;
-    margin: 10px;
-    padding: 5px;
     float: right;
+    background-color: @color-pu2;
+    padding:16px;
+    margin: 0 10px 0 10px;
   }
 
 // Cart
+.opc-wrapper {
+  width: 66.66666667% !important;
+}
 .paypal-review-discount .block > .title strong, .cart-discount .block > .title strong {
   color: @color-pu2;
 }
+.cart-summary {
+  background-color: @color-ceiling;
+}
+.opc-progress-bar-item._active:before, .opc-progress-bar-item._active > span:before { background-color: @color-floor;}
 
 // Footer
 @footer__background-color: @color-floor;
 @footer-links-color: @color-ceiling;
 @footer-links-color-hover: darken(@color-ceiling, 15%);
 @copyright__background-color: darken(@color-floor, 5%);
+
+// Quick order Dropdown
+.dropbtn {
+    background-color: @color-floor;
+    color: @color-ceiling;
+    padding: 19px 18px 18px 18px;
+    margin-right: 12px;
+    margin-top: -1px;
+    border: 0px;
+    //font-size: 16px;
+}
+button.dropbtn {
+  border: none;
+  border-radius: 0px;
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+    border:none;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: @color-white;
+    min-width: 320px;
+    padding:20px;
+    margin-right: 12px;
+    margin-top: -3px;
+    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.15);
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown:hover .dropbtn {
+    background-color: @color-white;
+    border-bottom: 0px;
+    border-radius: 8px 8px 0px 0px;
+    border-top: 0px solid @color-floor;
+    border-left:0px;
+    border-right:0px;
+    border-bottom:0px;
+}
+.block-addbysku {
+  margin-bottom: 0px;
+    .fieldset {
+        margin: 0;
+
+        .fields {
+            position: relative;
+
+            .field {
+                display: inline-block;
+                margin-bottom: @indent__s;
+                vertical-align: top;
+
+                &.sku {
+                    &:extend(.abs-add-box-sizing all);
+                  //  margin-right: -85px;
+                  //  padding-right: 90px;
+                    width: 70%;
+                }
+
+                &.qty {
+                    .qty {
+                        &:extend(.abs-input-qty all);
+                        + .mage-error {
+                            width: 20%;
+                        }
+                    }
+                }
+            }
+
+            .actions-toolbar {
+                position: absolute;
+                right: 0;
+                top: 6px;
+            }
+        }
+    }
+
+    .form-addbysku {
+        .actions-toolbar {
+            margin-bottom: @indent__base;
+
+            .primary {
+                text-align: left;
+
+                .action {
+                    width: auto;
+                }
+            }
+
+            .secondary {
+                float: none;
+                text-align: left;
+            }
+        }
+    }
+
+    .action {
+        &.add {
+            .lib-button-icon(
+            @_icon-font-content: @icon-expand,
+            @_icon-font-text-hide: true,
+            @_icon-font-size: 31px
+            );
+            line-height: normal;
+            padding: 2px 0;
+            width: auto;
+        }
+
+        &.links {
+            display: inline-block;
+            margin: @indent__base 0 0;
+        }
+
+        &.reset {
+            display: block;
+            margin: @indent__s 0;
+        }
+
+        &.remove {
+            .lib-button-icon(
+            @_icon-font-content: @icon-remove,
+            @_icon-font-text-hide: true,
+            @_icon-font-size: 28px
+            );
+            .lib-button-reset();
+        }
+    }
+}
 
 // CMS Blocks
 // @todo: cleanup
