edit cart summary color

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -114,7 +114,7 @@ div.minicart-wrapper { margin-top: -5px; }
   color: @color-pu2;
 }
 .cart-summary {
-  background-color: @color-ceiling;
+  background-color: @color-walls;
 }
 .opc-progress-bar-item._active:before, .opc-progress-bar-item._active > span:before { background-color: @color-floor;}
 
