--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -103,11 +103,12 @@
 .cart.table-wrapper .actions-toolbar > .action-edit:before, .cart.table-wrapper .actions-toolbar > .action-delete:before {color:@color-black;}
 
 @icon-search-color: @color-pu2;
+
 .block-search {
-    margin: 10px 10px 0 0;
-    width:40%;
-    float: right;
+    top: 42px; right: 210px;
+    width:45%;
   }
+
 div.minicart-wrapper { margin-top: -5px; }
 .nav-promo {
     display: inline-block;;
