edited my account cms block on hp

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -392,6 +392,7 @@ fieldset[disabled] .block-promo .button.more {
 .block-promo-2columns .content {
     padding: 20px 25px
 }
+.home-pants .content,
 .womens-main .content,
 .womens-pants .content,
 .training-main .content,
@@ -435,9 +436,10 @@ fieldset[disabled] .block-promo .button.more {
     max-width: 1280px
 }
 .home-pants .content {
-    top: 0;
-    left: 0;
-    width: 80%
+    top: 25px;
+    right: 25px;
+    left: 25px;
+    width: 85%;
 }
 .home-pants .title {
     display: block;
