fixed PLP title width

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -36,13 +36,13 @@
 
 // PLP
 .page-products .product-item-actions { float: right; }
-.page-products .product-item-name, .product.name a  { font-weight: 700 !important; font-size: 18px; width: 75%; display: inline;}
+.page-products .product-item-name, .product.name a  { font-weight: 700 !important; font-size: 18px; width: 80%; float:left; display: block;}
 .page-products .product-item .price-box { float: right;}
 .page-products .product-item .price {font-size: 18px;}
 .page-products .product-item-actions { clear: both;}
 .page-products .product-item-description { float: none; width: 75%;}
 .filter-options-title { word-break: break-word; }
-.products-list .product-image-wrapper .product-image-photo { margin-top: -60px; }
+.products-list .product-image-wrapper .product-image-photo { margin-top: -40px; }
 
 // PDP
 @gallery-thumb-border-color-active: @color-red; //not working?
