adding syle changes

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -74,6 +74,10 @@
 @navigation-desktop-level0-item__active__color: @color-walls;
 @navigation-desktop-level0-item__active__border-color: @color-walls;
 
+// Icons
+@icon-wishlist (@icon-font__size: 24px);
+@icon-tocompare (@icon-font__size: 24px);
+
 //@submenu-item__color: @color-pu2;
 @submenu-item__background: @color-white;
 @submenu-item__active__border-color: @color-walls;
