--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -77,6 +77,7 @@
 // Icons
 @icon-wishlist (@icon-font__size: 24px);
 @icon-tocompare (@icon-font__size: 24px);
+.product-social-links {font-size: 24px;}
 
 //@submenu-item__color: @color-pu2;
 @submenu-item__background: @color-white;
