fixing icon error

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -75,9 +75,7 @@
 @navigation-desktop-level0-item__active__border-color: @color-walls;
 
 // Icons
-@icon-wishlist (@icon-font__size: 24px);
-@icon-tocompare (@icon-font__size: 24px);
-.product-social-links {font-size: 24px;}
+.action.towishlist:before, .action.towishlist:before, .product-social-links {font-size: 24px;}
 
 //@submenu-item__color: @color-pu2;
 @submenu-item__background: @color-white;
