updated icon targeting

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -75,7 +75,7 @@
 @navigation-desktop-level0-item__active__border-color: @color-walls;
 
 // Icons
-.action.towishlist:before, .action.towishlist:before, .product-social-links {font-size: 24px;}
+.action.tocompare:before, .action.towishlist:before, .action.mailto.friend:before {font-size: 24px;}
 
 //@submenu-item__color: @color-pu2;
 @submenu-item__background: @color-white;
