add some air to order approval links

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -148,6 +148,7 @@ div.minicart-wrapper { margin-top: -5px; }
 .block-collapsible-nav .item.current > strong { border-color: @color-red;}
 .block-collapsible-nav .item.current a { border-color: @color-red; }
 .table tfoot, .order-details-items tfoot td { background: @color-walls;}
+a#openApprove { padding: 0px 10px 0px 10px; }
 
 
 // Footer
