--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -156,8 +156,8 @@ a#openApprove { padding: 0px 10px 0px 10px; }
 @footer-links-color: @color-ceiling;
 @footer-links-color-hover: darken(@color-ceiling, 15%);
 @copyright__background-color: darken(@color-floor, 5%);
-.page-footer .switcher strong { color: @color-ceiling;}
-.page-footer .switcher .options .action.toggle:after { color: @color-ceiling; font-size: 22px;}
+.page-footer .switcher strong { color: @color-ceiling !important;}
+.page-footer .switcher .options .action.toggle:after { color: @color-ceiling !important; font-size: 22px !important;}
 
 
 // Quick order Dropdown
