--- a/Magento_Catalog/templates/product/list/items.phtml
+++ b/Magento_Catalog/templates/product/list/items.phtml
@@ -18,7 +18,7 @@ switch ($type = $block->getType()) {
             $class = $type;
 
             $image = 'related_products_list';
-            $title = __('From our sister store');
+            $title = __('Items from Our Other Brands');
             $items = $block->getAllItems();
             $limit = $block->getPositionLimit();
             $shuffle = (int) $block->isShuffled();
@@ -38,7 +38,7 @@ switch ($type = $block->getType()) {
             $class = $type;
 
             $image = 'related_products_list';
-            $title = __('From our sister store');
+            $title = __('Items from Our Other Brands');
             $items = $block->getItems();
             $limit = 0;
             $shuffle = 0;
