work around for Quick Order collision

--- a/Magento_Theme/templates/html/topmenu.phtml
+++ b/Magento_Theme/templates/html/topmenu.phtml
@@ -25,10 +25,10 @@
           ->setBlockId('credit-app')
           ->toHtml();
           ?>
-          <?php echo $this->getLayout()
+          <?php /** echo $this->getLayout()
             ->createBlock('Magento\Cms\Block\Block')
             ->setBlockId('quick-order')
-            ->toHtml();
+            ->toHtml(); */
             ?>
     </ul>
     <?php echo $block->getChildHtml() ?>
