--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -54,6 +54,7 @@
 @button__color: @color-gray20;
 @button__background: @color-gray80;
 @button__border: 1px solid @border-color__base;
+button.action.tocart.primary {margin-top: 10px;}
 
 //  Primary button
 @button-primary__background: @color-red;
