updating checkout progress bar styling

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -143,6 +143,8 @@ div.minicart-wrapper { margin-top: -5px; }
 .opc-progress-bar-item._active:before, .opc-progress-bar-item._active > span:before { background-color: @color-floor;}
 .opc-wrapper .shipping-address-item.selected-item { border-color: @color-floor; }
 .opc-wrapper .shipping-address-item.selected-item:after { background: @color-floor; }
+.opc-progress-bar-item._active:before, .opc-progress-bar-item._active>span:before { background: @color-floor; border-color: @color-floor; }
+.opc-progress-bar-item._active>span:after { border-color: @color-floor; }
 
 // My Account
 .block-collapsible-nav .content { background-color: @color-walls;}
