enlarging wishlist, compare, and mailto icons

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -77,6 +77,12 @@ button.action.tocart.primary {margin-top: 10px;}
 
 // Icons
 .action.tocompare:before, .action.towishlist:before, .action.mailto.friend:before {font-size: 24px;}
+.product-item-actions .actions-secondary>.action:before { font-size: 30px; }
+.product-social-links .action.towishlist:before { font-size: 30px; }
+.product-social-links .action.tocompare:before { font-size: 30px; }
+.product-social-links .action.mailto.friend:before { font-size: 30px; }
+
+.bundle-options-container .block-bundle-summary .product-addto-links>.action:before, .product-item-actions .actions-secondary>.action:before, .product-social-links .action.tocompare:before, .wishlist.split.button>.action.split:before, .product-social-links .action.mailto.friend:before, .product-social-links .action.towishlist:before, .block-bundle-summary .action.towishlist:before, .product-item .action.towishlist:before, .table-comparison .action.towishlist:before { width: 30px;}
 
 //@submenu-item__color: @color-pu2;
 @submenu-item__background: @color-white;
