removal of quote filtering until styled

--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -50,6 +50,10 @@
 @gallery-dot-color-active: @color-red; //not working?
 .product.data.items > .item.content, .product.data.items > .item.title.active > .switch, .product.data.items > .item.title { background-color: @color-white; }
 .product.data.items > .item.title > .switch { background-color: @color-walls}
+
+// Admin
+.quote-grid-filters-wrap { display: none !important; } //temp removal of quote filtering until styled
+
 //  Buttons
 @button__color: @color-gray20;
 @button__background: @color-gray80;
