--- a/web/css/source/_brentmill.less
+++ b/web/css/source/_brentmill.less
@@ -42,7 +42,7 @@
 .page-products .product-item-actions { clear: both;}
 .page-products .product-item-description { float: none; width: 75%;}
 .filter-options-title { word-break: break-word; }
-.products-list .product-image-wrapper .product-image-photo { margin-top: -40px; }
+.products-list .product-image-wrapper .product-image-photo { margin-top: -40px; width: 100%;}
 .related-available .product.name a, .products-upsell .product.name a, .products-crosssell .product.name a { font-weight: 400 !important; font-size:1.4rem; width: 100%;}
 
 // PDP
